--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -16,7 +16,7 @@
           <a class="nav-link" href="/trails/new"><span class="nav-span-link">Upload Trail</span></a>
           <a class="nav-link" href="#"><% if (user) { %>
             <a href="/auth/logout">
-              <button type="submit"><span class="nav-span-link">Logout</span></button>
+              <button class="logout-btn" type="submit"><span class="nav-span-link">Logout</span></button>
             </a>
             <%# google signIn/signOut logic %> 
           <% } else { %>
